# medium-writer

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  tone_profile.md
.github/workflows/: deploy-gh-pages.yml
articles/: 2026-03-13-good-claude-code-setup-for-python-developers.md
docs/: app.js  index.html  style.css
prompts/: researcher_system.md  writer_system.md
src/medium_writer/: __init__.py  config.py  main.py  publisher.py  researcher.py  writer.py
